--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "gh-pages": "^2.0.1",
     "husky": "^2.7.0",
     "lint-staged": "^8.2.1",
+    "lodash": "^4.17.15",
     "prettier": "^1.18.2",
     "prism-react-renderer": "^0.1.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-github-btn": "^1.0.5",
     "react-github-corner": "^2.3.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "source-map-explorer": "^2.0.1",
     "styled-components": "^4.3.2",
     "tslint": "^5.18.0",
